# printtables

./: .gitignore  Cargo.toml  Cross.toml  README.md
.github/workflows/: cross.yaml
.sqlx/: query-2ddc9b8e3f44d794826db04da85a3ba3c82b111774d2b5d28347592ae3c8c4f6.json  query-38fc9d2433640b22238e0bfb069ac8c105b77d4ddc9cd45e52176d998387b82b.json  query-3a48d73a8673246b47106666b240c735990fc4094820434df245c1d183d3e357.json  query-4ee735c3afb5f2a5b432c728112e3e99b8f3bb4634e31a851d3d77af2b2a5137.json  query-6165b78eb5ce4ebb078b7c6c02d2481b1b056272ce3cc2b58b92d95cb0ce0e26.json  query-6cff04e83801fb0a05608b174b25980f639373d5dc2856b112d083222cea227e.json  query-8118c784ec6322f7e21bc862cfa39e3dd000dbfed43db23ab7becb0404b463bc.json  query-901f55b0dfe50e968a807425af98b26000f1f3b01b7f7ee34455f0d53a55f38c.json  query-b51c2ae546cae40228c34f79a3f1cb9997488c6a8fdfbb974adf8e2b6c41e9f7.json  query-c1f6967e2c0d3ea9b0dd197817e25265ad5bf719b444bf31a6f29f91816be7ad.json
docs/: _config.yml  index.md
docs/arch/: index.md  meta.puml
docs/arch/components/: components.md  components.puml
docs/arch/context/: containers.md  containers.puml
docs/arch/erd/: erd.md  erd.puml
docs/arch/quality-attributes/: utility-tree.md
docs/decisions/: 0001-use-adr-to-describe-decisions.md  0002-use-sqlite-as-project-database.md  index.md
docs/devlog/: first-use-cases.md  getting-started.md  index.md  initial-use-cases.puml  registering-parts.md
migrations/: 20241023204933_create_project_table.sql  20241102181650_create_part_table.sql  20241124203929_create_bom_table.sql
src/: lib.rs
src/infra/: mod.rs  tracing.rs
src/infra/sqlite/: part.rs
src/infra/sqlx/: mod.rs  part.rs  project.rs  project_view.rs
src/inventory/: mod.rs
src/inventory/app/: service.rs
src/inventory/domain/: mod.rs  name.rs  part.rs  part_repository.rs
src/projects/: mod.rs
src/projects/app/: mod.rs  service.rs
src/projects/domain/: mod.rs  name.rs  project.rs  repository.rs  validation.rs
src/projects/infra/: axum.rs  memory.rs  mod.rs
src/projects/view/: project.rs  repository.rs
src/server/: mod.rs  rest.rs  startup.rs  tracing.rs
src/server/routes/: health.rs  mod.rs  projects.rs  router.rs
src/shared/: mod.rs
src/shared/validation/: error.rs  validator.rs
tests/: manage_parts.rs  register_part.rs  register_project.rs  server.rs  server_health.rs
tests/api/: main.rs  manage_parts.rs  register_part.rs  register_project.rs  server.rs  server_health.rs
tests/api/rest/: project.rs
(+11 files in other folders)
