[package]
name = "printtables"
version = "0.1.0-alpha.0"
edition = "2021"
license-file = "LICENSE"
description = "Tracker for multipart 3D-printing projects"
authors = ["Dmytro Kovalchuk <dimasmith@gmail.com>"]
homepage = "https://dimasmith.github.io/printtables/"

[[bin]]
name = "printtables-ui"
path = "src/bin/tui.rs"

[[bin]]
name = "printtables-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7.7" }
anyhow = "1"

[dev-dependencies]
reqwest = "0.12"
