[package]
name = "printtables"
version = "0.1.0-alpha.0"
edition = "2021"
license-file = "LICENSE"
description = "Tracker for multipart 3D-printing projects"
authors = ["Dmytro Kovalchuk <dimasmith@gmail.com>"]
homepage = "https://dimasmith.github.io/printtables/"

[[bin]]
name = "printtables-ui"
path = "src/bin/tui.rs"

[[bin]]
name = "printtables-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7.7" }
anyhow = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }

[dev-dependencies]
reqwest = "0.12"
