[package]
name = "printtables"
version = "0.1.0-alpha.0"
edition = "2021"
license-file = "LICENSE"
description = "Tracker for multipart 3D-printing projects"
authors = ["Dmytro Kovalchuk <dimasmith@gmail.com>"]
homepage = "https://dimasmith.github.io/printtables/"

[[bin]]
name = "printtables-ui"
path = "src/bin/tui.rs"

[[bin]]
name = "printtables-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7.7", features = ["json"] }
anyhow = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
async-trait = "0.1.83"
serde = { version = "1.0.212", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = [ "json" ] }
fake = "2.10.0"
